Fix problem with tabs jumping: add min-height to tab-content

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1300,6 +1300,7 @@ div#flash-error {
 {
 	width:1040px;
 	padding:25px 20px;
+	min-height:200px;
 }
 
 .tab-content h3
